Update pages/register.ejs, add /pages/login.ejs

--- a/src/public/styles/pages/login.css
+++ b/src/public/styles/pages/login.css
@@ -35,6 +35,7 @@ body {
     flex-wrap: wrap;
     gap: 12px;
     font-size: 1rem;
+
 }
 
 .intro__slogan {
@@ -48,7 +49,8 @@ body {
     font-size: 1.5rem;
 }
 
-.register {
+.login {
+    width: 55%;
     box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.25);
     border-radius: 12px;
     box-sizing: border-box;
@@ -62,45 +64,23 @@ body {
     margin: 0;
 }
 
-.register__title {
+.login__title {
     text-align: center;
     font-size: 2rem;
     font-weight: 600;
 }
 
-.register__note {
-    width: 100%;
-    font-style: italic;
-    font-size: 0.875rem;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-}
-
-.red {
-    color: red;
-}
-
-
-.register__form {
+.login__form {
     display: inherit;
     flex-direction: inherit;
     gap: 18px;
 }
 
-.register__form input,
+.login__form input,
 .form__submit,
-.register__login {
+.login__register {
     height: 48px;
     box-sizing: border-box;
-}
-
-.double {
-    gap: 12px;
-}
-
-.double .col {
-    padding: 0;
 }
 
 .form-label {
@@ -121,7 +101,7 @@ body {
     font-weight: 500;
 }
 
-.register__login {
+.login__register {
     border: 1px solid #FE9C0B;
     font-weight: 500;
     padding-top: 10px;
@@ -131,9 +111,6 @@ body {
     color: #FE9C0B;
 }
 
-.register__confirm {
-    text-align: center;
-}
 
 .input_form {
     padding: 0;
