--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -45,7 +45,8 @@
                     </label>
                     <div class="container__register__form__input__input-field">
                         <input type="password" name="password" id="password" placeholder="Nhập mật khẩu" required>
-                        <span class="material-symbols-outlined">visibility</span>
+                        <span id="eye1" class="material-symbols-outlined">visibility</span>
+                        <!-- <span id="eye2" class="material-symbols-outlined">visibility_off</span> -->
                     </div>
                 </div>
                 <div class="container__register__form__input">
@@ -53,10 +54,11 @@
                     <div class="container__register__form__input__input-field">
                         <input type="password" name="confirm-password" id="confirm-password" placeholder="Nhập lại mật khẩu" required>
                         <span class="material-symbols-outlined">visibility</span>
+                        <!-- <span id="eye2" class="material-symbols-outlined">visibility_off</span> -->
                     </div>
                 </div>
             </form>
-            <button type="submit" form="register-form">Đăng ký</button>
+            <button id="register-button" type="submit" form="register-form">Đăng ký</button>
             <p class="container__register__login">Bạn đã có tài khoản? <a class="highlight" href="#">Đăng nhập</a></p>
             <p class="container__register__confirm">Bằng việc đăng ký, bạn đã đồng ý với 2Ways về <a href="#">điều khoản dịch vụ</a> và <a href="#">chính sách bảo mật</a>.</p>
         </div>
