--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -53,7 +53,7 @@
                     
                     <div class="input_form">
                         <input type="password" class="form-control form__password-confirm" id="form__password-confirm" placeholder="Nhập lại mật khẩu">
-                        <span class="material-symbols-outlined" id="eye2">visibility</span>
+                        <span class="material-symbols-outlined" id="eye-open-cpsw">visibility</span>
                     </div>
                 </div>
                 <div class="error-message" id="error-message"></div>
