--- a/src/views/components/header-full.ejs
+++ b/src/views/components/header-full.ejs
@@ -171,7 +171,10 @@
         margin-top: 55px;
         padding: 8px;
       }
-
+      .top-authenticator button:hover {
+        box-shadow: 1px 2px rgba(0, 0, 0, 0.7);
+        transition: 0.2s;
+      }
       .main--search .search__wrapper {
         background-color: #ffffff;
         border-radius: 8px;
@@ -198,9 +201,12 @@
       }
       .input_address {
         position: absolute;
-        border: none;
+        text-decoration: none;
+        transition: filter 0.2s;
       }
-
+      .input_address:hover {
+        filter: opacity(0.2);
+      }
       .button--submit {
         background-color: #fe9c0b;
         font-size: 16px;
@@ -209,6 +215,12 @@
         border-radius: 8px;
         border: none;
         margin-left: 8px;
+        transition: 0.3s;
+      }
+
+      .button--submit:hover {
+        width: 110px;
+        /* box-shadow: 1px 2px #90a6b1; */
       }
     </style>
   </head>
