fixed ui input search address

--- a/src/views/components/header-full.ejs
+++ b/src/views/components/header-full.ejs
@@ -198,6 +198,7 @@
         margin-left: 40px;
         background-color: #ffffff;
         border: none;
+        color: #90a6b1;
       }
       .input_address {
         position: absolute;
