add script tag into .ejs and update header.js

--- a/src/views/components/header-small.ejs
+++ b/src/views/components/header-small.ejs
@@ -150,6 +150,6 @@
         </div>
       </div>
     </header>
-    <script src=""></script>
+    <script src="../../public/scripts/header.js"></script>
   </body>
 </html>
