--- a/src/views/components/header-full.ejs
+++ b/src/views/components/header-full.ejs
@@ -316,6 +316,6 @@
         </div>
       </div>
     </header>
-    <script src=""></script>
+    <script src="../../public/scripts/header.js"></script>
   </body>
 </html>
