--- a/src/views/components/header-medium.ejs
+++ b/src/views/components/header-medium.ejs
@@ -277,6 +277,6 @@
         </div>
       </div>
     </header>
-    <script src=""></script>
+    <script src="../../public/scripts/header.js"></script>
   </body>
 </html>
