--- a/src/views/components/header-small-title.ejs
+++ b/src/views/components/header-small-title.ejs
@@ -142,6 +142,6 @@
         </div>
       </div>
     </header>
-    <script src=""></script>
+    <script src="../../public/scripts/header.js"></script>
   </body>
 </html>
