--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <%- include('../partials/header-small-title') %>
+
     <main class="content-container">
         <section class="intro">
             <img src="/imgs/logo-large.png" alt="2WAYS.com" class="intro__logo">
@@ -67,6 +69,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="../../public/scripts/header.js"></script>
     <script src="/scripts/register.js"></script>
 
 </body>
