--- a/src/views/components/header-full.ejs
+++ b/src/views/components/header-full.ejs
@@ -43,7 +43,7 @@
       header {
         position: fixed;
         width: 100%;
-        background-image: url(../img/bg-header.png);
+        background-image: url(../../public/imgs/bg);
         height: 484px;
         position: no-repeat;
         position: contain;
@@ -231,11 +231,7 @@
       <div class="container">
         <div class="container__header--top">
           <div class="logo-img">
-            <img
-              src="../img/Logo.png"
-              style="background-color: #085457"
-              alt=""
-            />
+            <img src="../../public/imgs/logo-white.png" alt="" />
           </div>
           <div class="container__nav--top">
             <ul>
