--- a/src/public/styles/partials/header-small-title.css
+++ b/src/public/styles/partials/header-small-title.css
@@ -1,34 +1,24 @@
-* {
-    margin: 0;
-    padding: 0;
-    color: #ffffff;
-    font-size: 16px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-        sans-serif;
-    font-weight: 500;
-}
-
 header {
-    position: fixed;
-    width: 100%;
     background-color: #085457;
     height: 112px;
 }
 
 .container {
-    max-width: 1152px;
+    width: 100vw;
     height: 112px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .container__header--top {
     display: flex;
-    max-width: 1152px;
+    max-width: 80%;
     align-items: center;
     justify-content: space-between;
     gap: 2px;
     align-self: stretch;
-    margin-top: 24px;
+    /* margin-top: 24px; */
 }
 
 .container__header--top img {
@@ -67,6 +57,7 @@ align-items: center; */
     font-size: 24px;
     font-family: Roboto;
     font-weight: 600;
+    text-decoration: none;
 }
 
 .container__nav--top a {
