--- a/src/public/styles/pages/register.css
+++ b/src/public/styles/pages/register.css
@@ -1,5 +1,5 @@
 @import url("/styles/variables.css");
-@import url("/styles/partials/header-small-title.css");
+@import url("/styles/partials/header-small.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -7,11 +7,11 @@ html {
     color: #000000;
 }
 
-body {
+/* body {
     width: 100vw;
     display: flex;
     flex-direction: column;
-}
+} */
 
 .content-container {
     width: 80%;
