--- a/src/public/styles/partials/header-small.css
+++ b/src/public/styles/partials/header-small.css
@@ -1,11 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-    color: #ffffff;
+@import url("/styles/variables.css");
+
+html {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-        sans-serif;
+    color: #ffffff;
     font-weight: 500;
 }
 
@@ -15,20 +13,14 @@ header {
     background-color: #085457;
     height: 112px;
 }
-
-.container {
-    max-width: 1152px;
-    height: 112px;
-}
-
 .container__header--top {
     display: flex;
-    max-width: 1152px;
+    max-width: 80%;
     align-items: center;
     justify-content: space-between;
     gap: 2px;
     align-self: stretch;
-    margin-top: 24px;
+    /* margin-top: 24px; */
 }
 
 .container__header--top img {
