--- a/src/public/styles/pages/register.css
+++ b/src/public/styles/pages/register.css
@@ -4,7 +4,7 @@
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    color: #000000;
+    color: #ffffff;
 }
 
 /* body {
