--- a/src/views/partials/header-small.ejs
+++ b/src/views/partials/header-small.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="container__header--top">
       <div class="logo-img">
-        <img src="../../public/imgs/logo-white.png" alt="" />
+        <img src="/imgs/logo-white.png" alt="" />
       </div>
       <div class="container__nav--top">
         <ul>
@@ -13,7 +13,7 @@
       <div class="top-authenticator">
         <p>Chào,</p>
         <p>Giau Phan</p>
-        <img src="../img/row-1-column-6.png" alt="" />
+        <img src="/imgs/logo-white.png" alt="" />
       </div>
     </div>
   </div>
