--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <%- include('../partials/header-small') %>
+    <%- include('../partials/header-medium') %>
 
     <main class="content-container">
       <section class="intro">
