--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -2,49 +2,75 @@
 <html lang="vi">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>2WAYS.com</title>
-    <link rel="stylesheet" href="/styles/pages/login.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous">
+  <title>2WAYS.com</title>
+  <link rel="stylesheet" href="/styles/base.css">
+  <link rel="stylesheet" href="/styles/pages/index.css">
 </head>
 
 <body>
-<main class="content-container">
-        <section class="intro">
-            <img src="/imgs/logo-large.png" alt="2WAYS.com" class="intro__logo">
-            <div class="intro__content">
-                <p class="intro__slogan">Cần nơi dừng chân?<br>Đến ngay 2WAYS.com</p>
-                <p class="intro__sub-title">Tìm phòng với giá ưu đãi nhất từ khách sạn, nhà nghỉ...</p>
+  <div id="main">
+    <header></header>
+    <main>
+      <section id="discover-section" class="mt-32 primary-text">
+        <h1 class="section__title">Khám phá về 2Way</h1>
+        <div class="section__content mt-32">
+          <img src="/imgs/discover__banner.png" alt="Discover Banner">
+          <span>2WAY Vung Tau</span>
+        </div>
+      </section>
+      <section id="voucher-section" class="mt-32 primary-text">
+        <h1 class="section__title">Các ưu đãi mới nhất</h1>
+        <div class="section__content mt-32">
+          <div class="container">
+            <div class="voucher__item">
+              <h2 class="voucher__item__title">Tận hướng kì nghỉ dài hạn
+                nhất</h2>
+              <p class="voucher__item__description">Tìm kiếm nơi dừng chân cho
+                phép bạn có thể ở lại thời gian nhiều nhất</p>
+              <button class="btn--filled" type="button">
+                <div class="status-layer">
+                  <span>Tìm hiểu ngay</span>
+                </div>
+              </button>
             </div>
-        </section>
-        <section class="login">
-            <h1 class="login__title">Đăng nhập</h1>
-            <form class="login__form form" id="login-form" action ="post">
-                <div class="row">
-                    <label for="form__email" class="form-label">Email</label>
-                    <input type="email" class="form-control form__email" id="form__email" placeholder="Nhập email">
+            <div class="voucher__item">
+              <h2 class="voucher__item__title">Tận hướng kì nghỉ dài hạn
+                nhất</h2>
+              <p class="voucher__item__description">Tìm kiếm nơi dừng chân cho
+                phép bạn có thể ở lại thời gian nhiều nhất</p>
+              <button class="btn--filled" type="button">
+                <div class="status-layer">
+                  <span>Tìm hiểu ngay</span>
                 </div>
-                <div class="row">
-                    <label for="form__password" class="form-label">Mật khẩu</label>
-                    <div class="input_form">
-                      <input type="password" class="form-control form__password" id="form__password" placeholder="Nhập mật khẩu">
-                      <span class="material-symbols-outlined" id="eye-open">visibility</span>
-                    </div>
-                </div>
-                <div class="error-message" id="error-message"></div>
-                <button id="login-button" type="submit" class="btn form__submit">Đăng nhập</button>
-            </form>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="partners-section" class="mt-32 primary-text">
+        <h1 class="section__title">Các Đối tác của 2Ways</h1>
+      </section>
+      <section id="factor-section" class="mt-32 primary-text">
+        <h1 class="section__title">Chúng tôi đảm bảo về các yếu tố</h1>
+      </section>
+    </main>
+    <footer class="mt-32"></footer>
+  </div>
 
-            <a href="#" class="btn login__register" role="button">Bạn chưa có tài khoản? <span class="highlight">Đăng ký</span></a>
-        </section>
-</main>
-    
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="/scripts/login.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <!-- <script src="/scripts/login.js"></script> -->
 
 </body>
-
 </html>
