--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -2,12 +2,23 @@
   --primary: #00696D;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
 .primary {
   background-color: var(--primary);
 }
 
 .primary-text {
   color: var(--primary);
+}
+
+.mt-16 {
+  margin-top: 16px;
 }
 
 .mt-32 {
