--- a/src/public/styles/pages/index.css
+++ b/src/public/styles/pages/index.css
@@ -1,5 +1,61 @@
 .section__title {
+  font-size: 48px;
   text-align: center;
+}
+
+.section__detail {
+  font-size: 24px;
+  text-align: center;
+}
+
+.slider {
+  width: 400px;
+  height: 300px;
+  overflow: hidden;
+}
+
+.slider-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.slider-image.active {
+  opacity: 1;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+
+  33.33% {
+    transform: translateX(-100%);
+  }
+
+  66.66% {
+    transform: translateX(-200%);
+  }
+
+  100% {
+    transform: translateX(-200%);
+  }
+}
+
+.slider-image:nth-child(1) {
+  animation: slide 9s infinite;
+}
+
+.slider-image:nth-child(2) {
+  animation: slide 9s infinite;
+  animation-delay: 3s;
+}
+
+.slider-image:nth-child(3) {
+  animation: slide 9s infinite;
+  animation-delay: 6s;
 }
 
 #discover-section {
@@ -30,22 +86,96 @@
   & .section__content>* {
     display: flex;
     flex-direction: row;
-    gap: 32px;
+    gap: 1rem;
+  }
+
+  & .voucher__item {
+    width: 50%;
+    height: 272px;
+    background: rgba(250, 250, 0, 0.5);
+
+    padding: 12px 24px;
+    border-radius: 12px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 8px;
+    flex: 1 0 0;
   }
 }
 
-.voucher__item {
-  width: 50%;
-  height: 272px;
-  background: rgba(250, 250, 0, 0.5);
+#partners-section {
+  & .section__content>* {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
 
-  padding: 12px 24px;
-  border-radius: 12px;
+  & .partners__item {
+    width: 25%;
+    min-height: 100px;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 8px;
-  flex: 1 0 0;
+    padding: 16px;
+    /* border-radius: 1rem; */
+
+    text-align: center;
+
+    /* background-color: #000; */
+
+    & .partners__logo {
+      height: 64px;
+      aspect-ratio: 1/1;
+    }
+
+    & .partners__name {
+      text-align: center;
+    }
+  }
+}
+
+#banner {
+  position: relative;
+
+  & .banner__img {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  & .banner__logan {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+#factor-section {
+  & .section__content>* {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  & .factor__item {
+    width: 25%;
+    min-height: 100px;
+
+    padding: 16px;
+    /* border-radius: 1rem; */
+
+    text-align: center;
+
+    /* background-color: #000; */
+
+    & .factor__logo {
+      height: 64px;
+      aspect-ratio: 1/1;
+    }
+
+    & .factor__name {
+      text-align: center;
+    }
+  }
 }
