--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -22,9 +22,14 @@
     <main>
       <section id="discover-section" class="mt-32 primary-text">
         <h1 class="section__title">Khám phá về 2Way</h1>
-        <div class="section__content mt-32">
+        <!-- <div class="section__content mt-32">
           <img src="/imgs/discover__banner.png" alt="Discover Banner">
           <span>2WAY Vung Tau</span>
+        </div> -->
+        <div class="section__content mt-32 slider">
+          <img src="/imgs/discover__image1.png" alt="Image 1" class="slider-image">
+          <img src="/imgs/discover__image2.png" alt="Image 2" class="slider-image">
+          <img src="/imgs/discover__image3.png" alt="Image 3" class="slider-image">
         </div>
       </section>
       <section id="voucher-section" class="mt-32 primary-text">
@@ -43,10 +48,9 @@
               </button>
             </div>
             <div class="voucher__item">
-              <h2 class="voucher__item__title">Tận hướng kì nghỉ dài hạn
-                nhất</h2>
-              <p class="voucher__item__description">Tìm kiếm nơi dừng chân cho
-                phép bạn có thể ở lại thời gian nhiều nhất</p>
+              <h2 class="voucher__item__title">Phòng nghỉ với giá tiết kiệm</h2>
+              <p class="voucher__item__description">Tìm kiếm nơi dừng chân phù
+                hợp với túi tiền của bạn nhất có thể</p>
               <button class="btn--filled" type="button">
                 <div class="status-layer">
                   <span>Tìm hiểu ngay</span>
@@ -55,12 +59,60 @@
             </div>
           </div>
         </div>
+        <p class="section__detail mt-16">Khuyến mãi, giảm giá và ưu đãi đặc biệt
+          dành riêng cho bạn</p>
       </section>
       <section id="partners-section" class="mt-32 primary-text">
         <h1 class="section__title">Các Đối tác của 2Ways</h1>
+        <div class="section__content mt-32">
+          <div class="container">
+            <div class="partners__item">
+              <img class="partners__logo" src="" alt="">
+              <p class="partners__name mt-16">Tên công tyABCDEFGHIKLMNO</p>
+            </div>
+            <div class="partners__item">
+              <img class="partners__logo" src="" alt="">
+              <p class="partners__name mt-16">Tên công tyABCDEFGHIKLMNO</p>
+            </div>
+            <div class="partners__item">
+              <img class="partners__logo" src="" alt="">
+              <p class="partners__name mt-16">Tên công tyABCDEFGHIKLMNO</p>
+            </div>
+            <div class="partners__item">
+              <img class="partners__logo" src="" alt="">
+              <p class="partners__name mt-16">Tên công tyABCDEFGHIKLMNO</p>
+            </div>
+          </div>
+        </div>
+        <p class="section__detail mt-16">Cùng các đối tác có được đánh giá
+          cao!</p>
+      </section>
+      <section id="banner" class="mt-32">
+        <img class="banner__img" src="/imgs/banner.png" alt="">
+        <img class="banner__logan" src="/imgs/banner__logan.svg" alt="">
       </section>
       <section id="factor-section" class="mt-32 primary-text">
         <h1 class="section__title">Chúng tôi đảm bảo về các yếu tố</h1>
+        <div class="section__content mt-32">
+          <div class="container">
+            <div class="factor__item">
+              <img class="factor__logo" src="" alt="">
+              <p class="factor__name mt-16">Yếu tố 1</p>
+            </div>
+            <div class="factor__item">
+              <img class="factor__logo" src="" alt="">
+              <p class="factor__name mt-16">Yếu tố 2</p>
+            </div>
+            <div class="factor__item">
+              <img class="factor__logo" src="" alt="">
+              <p class="factor__name mt-16">Yếu tố 3</p>
+            </div>
+            <div class="factor__item">
+              <img class="factor__logo" src="" alt="">
+              <p class="factor__name mt-16">Yếu tố 4</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="mt-32"></footer>
