--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -15,10 +15,11 @@
     />
     <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/pages/register.css" />
+    <link rel="stylesheet" href="/styles/partials/header-medium.css" />
   </head>
 
   <body>
-    <%- include('../partials/header-medium') %>
+    <%- include('../partials/header-full') %>
 
     <main class="content-container">
       <section class="intro">
