--- a/src/public/styles/partials/header-medium.css
+++ b/src/public/styles/partials/header-medium.css
@@ -1,33 +1,45 @@
+/* * {
+    margin: 0;
+    padding: 0;
+    color: #ffffff;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+    font-weight: 500;
+} */
+
 header {
-    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    /* position: sticky; */
     width: 100vw;
+    /* background-image: url(../../public/imgs/bg); */
     height: 240px;
     position: no-repeat;
     position: contain;
-    background-color: pink;
+    background-color: #085457;
+    z-index: 1;
+    top: 0;
 }
-
 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 80%;
-    height: 240px;
 }
-
 .container__header--top {
     display: flex;
-    /* max-width: 1152px; */
     align-items: center;
     justify-content: space-between;
-    gap: 2px;
+    gap: 32px;
     align-self: stretch;
-    margin-top: 24px;
 }
 
 .container__header--top img {
-    display: flex;
     width: 167.652px;
     height: 48px;
-    /* justify-content: center;
-  align-items: center; */
 }
 
 .container__nav--top {
@@ -45,7 +57,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    /* height: 0; */
+    gap: 12px;
+    height: 65px;
 }
 
 .container__nav--top ul li {
@@ -63,7 +76,11 @@ header {
 .container__nav--top a {
     color: #ffffff;
 }
-
+.top-authenticator {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
 /* Header with no login*/
 .top-authenticator button {
     width: 128px;
@@ -84,63 +101,102 @@ header {
 
 /* Header with login*/
 /* .top-authenticator {
-      top: 0;
-      right: 0;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-    }
-    .top-authenticator img {
-      width: 64px;
-      height: 64px;
-      margin: 0 5px;
-      border-radius: 100%;
-    }
-    .top-authenticator p {
-      margin: 0 5px;
-      font-size: 24px;
-      font-family: Roboto;
-      font-weight: 600;
-      line-height: 32px;
-    } */
+        top: 0;
+        right: 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+      }
+      .top-authenticator img {
+        width: 64px;
+        height: 64px;
+        margin: 0 5px;
+        border-radius: 100%;
+      }
+      .top-authenticator p {
+        margin: 0 5px;
+        font-size: 24px;
+        font-family: Roboto;
+        font-weight: 600;
+        line-height: 32px;
+      } */
+
+.header--title {
+    margin-top: 64px;
+    margin-left: -540px;
+}
+
+.header--title h1 {
+    color: white;
+    font-size: 57px;
+    font-weight: 700;
+    line-height: 64px;
+    word-wrap: break-word;
+}
+
+.header--title h3 {
+    margin-top: 16px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+    word-wrap: break-word;
+    color: white;
+}
 
 .main--search {
     display: flex;
-    width: 100%;
     margin-top: 55px;
-    padding: 8px;
+    /* padding: 8px; */
+    width: 1152px;
+}
+
+.top-authenticator button:hover {
+    box-shadow: 1px 2px rgba(0, 0, 0, 0.7);
+    transition: 0.2s;
 }
 
 .main--search .search__wrapper {
     background-color: #ffffff;
     border-radius: 8px;
     height: 64px;
-    width: 1000px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 98%;
+    padding-left: 8px;
 }
 
 .search-address {
-    width: 291px;
-    margin-top: -22px;
-    margin-left: 20px;
+    /* position: relative; */
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    /* margin-top: -22px;
+    margin-left: 20px; */
 }
 
 .search-address span {
-    position: absolute;
     color: #90a6b1;
+    width: 24px;
+    height: 24px;
 }
 
 .search-address input {
-    margin-left: 40px;
+    margin-left: 10px;
     background-color: #ffffff;
     border: none;
     color: #90a6b1;
 }
 
 .input_address {
-    position: absolute;
+    text-decoration: none;
+    transition: filter 0.2s;
+}
+
+.input_address:hover {
+    filter: opacity(0.2);
 }
 
 .button--submit {
@@ -151,4 +207,9 @@ header {
     border-radius: 8px;
     border: none;
     margin-left: 8px;
+    transition: 0.3s;
+}
+
+.button--submit:hover {
+    width: 110px;
 }
