--- a/src/public/styles/partials/header-small.css
+++ b/src/public/styles/partials/header-small.css
@@ -13,6 +13,7 @@ header {
     background-color: #085457;
     height: 112px;
     top: 0;
+    z-index: 1;
 }
 
 .container {
@@ -25,7 +26,7 @@ header {
     align-items: center;
     justify-content: space-between;
     /* gap: 68px; */
-    width: 89%;
+    width: 80%;
     align-self: stretch;
 }
 
