--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -15,7 +15,7 @@
     />
     <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/pages/register.css" />
-    <link rel="stylesheet" href="/styles/partials/header-medium.css" />
+    <link rel="stylesheet" href="/styles/partials/header-full.css" />
   </head>
 
   <body>
@@ -139,5 +139,6 @@
     ></script>
     <script src="../../public/scripts/header.js"></script>
     <script src="/scripts/register.js"></script>
+    <script src="/scripts/header.js"></script>
   </body>
 </html>
