--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -24,6 +24,12 @@
       </div>
     </div>
 
+    <div class="header--title">
+      <h1>Cần nơi dừng chân</h1>
+      <h1>Đến ngay 2WAYS.com</h1>
+      <h3>Tìm phòng với giá ưu đãi nhất từ khách sạn, nhà nghỉ,...</h3>
+    </div>
+
     <div class="main--search">
       <div class="search__wrapper">
         <div class="search-address">
