--- a/src/views/partials/header-medium.ejs
+++ b/src/views/partials/header-medium.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="container__header--top">
       <div class="logo-img">
-        <img src="/imgs/logo-white.png" alt="" style="background-color: pink" />
+        <img src="/imgs/logo-white.png" alt="" />
       </div>
       <div class="container__nav--top">
         <ul>
