Fix header-small-title.ejs, header-small-title.css

--- a/src/public/styles/variables.css
+++ b/src/public/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #085457;
-    --second-color: #ffffff;
+    --white: #ffffff;
     --third-color: #90a6b1;
     --fouth-color: #fe9c0b;
 }
