--- a/src/views/partials/header-small-title.ejs
+++ b/src/views/partials/header-small-title.ejs
@@ -1,13 +1,7 @@
 <header>
-  <div class="container__header--top">
-    <div class="logo-img">
-      <img src="/imgs/logo-white.png" alt="2WAYS.com" />
+    <div class="header-container">
+        <img class="header-container__logo" src="/imgs/logo-white.png" alt="2WAYS.com" />
+        <p class="header-container__title" href="#">Đăng ký</a></p>
+        <a href="#" class="header-container__help">Bạn cần sự trợ giúp?</a>
     </div>
-    <div class="container__nav--top">
-      <li><a href="#">title</a></li>
-    </div>
-    <div class="top-authenticator">
-      <p>Bạn cần sự trợ giúp?</p>
-    </div>
-  </div>
 </header>
