--- a/src/public/styles/partials/header-small-title.css
+++ b/src/public/styles/partials/header-small-title.css
@@ -1,63 +1,32 @@
-@import url("/styles/variables.css");
-
 header {
-    background-image: url(/imgs/bg-header.png);
+    background-color: var(--primary-color);
     height: 112px;
-    width: 100vw;
-    align-items: center;
-    justify-content: space-around;
     display: flex;
-    z-index: 1;
+    align-items: center;
 }
 
-.container__header--top {
+.header-container {
+    width: 80%;
+    margin: 0 auto;
     display: flex;
-    max-width: 80%;
     align-items: center;
     justify-content: space-between;
-    gap: 68px;
-    align-self: stretch;
 }
 
-.container__header--top img {
-    display: flex;
-    width: 167.652px;
+.header-container__logo {
+    width: 168px;
     height: 48px;
 }
 
-.container__nav--top {
-    width: 656px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
-}
-
-.container__nav--top li {
-    list-style: none;
-}
-
-.container__nav--top li a {
-    font-size: 24px;
-    font-family: Roboto;
+.header-container__title {
+    font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
-    color: white;
+    color: var(--white);
+    margin: 0;
 }
 
-.top-authenticator {
-    top: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.top-authenticator p {
-    margin: 0 5px;
-    font-size: 22px;
-    font-family: Roboto;
-    line-height: 32px;
-    color: white;
+.header-container__help {
+    font-size: 1.375rem;
+    color: var(--white);
 }
