--- a/src/public/styles/pages/register.css
+++ b/src/public/styles/pages/register.css
@@ -1,5 +1,6 @@
 @import url("/styles/variables.css");
 @import url("/styles/partials/header-small-title.css");
+@import url("/styles/partials/footer.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
