--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/pages/login.css">
+    <title>2WAYS.com</title>
 </head>
 
 <body>
-<main class="content-container">
+    <%- include('../partials/header-small-title', {title}) %>
+
+    <main class="content-container">
         <section class="intro">
             <img src="/imgs/logo-large.png" alt="2WAYS.com" class="intro__logo">
             <div class="intro__content">
@@ -21,7 +23,7 @@
         </section>
         <section class="login">
             <h1 class="login__title">Đăng nhập</h1>
-            <form class="login__form form" id="login-form" action ="post">
+            <form class="login__form form" id="login-form" action="post">
                 <div class="row">
                     <label for="form__email" class="form-label">Email</label>
                     <input type="email" class="form-control form__email" id="form__email" placeholder="Nhập email">
@@ -29,8 +31,8 @@
                 <div class="row">
                     <label for="form__password" class="form-label">Mật khẩu</label>
                     <div class="input_form">
-                      <input type="password" class="form-control form__password" id="form__password" placeholder="Nhập mật khẩu">
-                      <span class="material-symbols-outlined" id="eye-open">visibility</span>
+                        <input type="password" class="form-control form__password" id="form__password" placeholder="Nhập mật khẩu">
+                        <span class="material-symbols-outlined" id="eye-open">visibility</span>
                     </div>
                 </div>
                 <div class="error-message" id="error-message"></div>
@@ -39,8 +41,9 @@
 
             <a href="#" class="btn login__register" role="button">Bạn chưa có tài khoản? <span class="highlight">Đăng ký</span></a>
         </section>
-</main>
-    
+    </main>
+
+    <%- include('../partials/footer.ejs') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/scripts/login.js"></script>
