--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -7,32 +7,24 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="/styles/pages/register.css" />
-    <link rel="stylesheet" href="/styles/partials/header-small-title.css" />
     <title>2WAYS.com</title>
 </head>
 
 <body>
-    <%- include('../partials/header-small-title') %>
+    <%- include('../partials/header-small-title', {title}) %>
 
     <main class="content-container">
         <section class="intro">
             <img src="/imgs/logo-large.png" alt="2WAYS.com" class="intro__logo" />
             <div class="intro__content">
-                <p class="intro__slogan">
-                    Cần nơi dừng chân?<br />Đến ngay 2WAYS.com
-                </p>
-                <p class="intro__sub-title">
-                    Tìm phòng với giá ưu đãi nhất từ khách sạn, nhà nghỉ...
-                </p>
+                <p class="intro__slogan">Cần nơi dừng chân?<br />Đến ngay 2WAYS.com</p>
+                <p class="intro__sub-title">Tìm phòng với giá ưu đãi nhất từ khách sạn, nhà nghỉ...</p>
             </div>
         </section>
 
         <section class="register">
             <h1 class="register__title">Đăng ký</h1>
-            <p class="register__note">
-                Thông tin có dấu <span class="red">*</span> là những thông tin bắt
-                buộc.
-            </p>
+            <p class="register__note"> Thông tin có dấu <span class="red">*</span> là những thông tin bắt buộc.</p>
             <form class="register__form form" id="register-form">
                 <div class="row double">
                     <div class="col">
@@ -52,9 +44,7 @@
 
                 <div class="row">
                     <label for="form__password" class="form-label">Mật khẩu <span class="red">*</span></label>
-                    <p class="form-text register__note">
-                        Đặt mật khẩu có ít nhất là 8 ký tự, trong đó có cả chữ và số.
-                    </p>
+                    <p class="form-text register__note">Đặt mật khẩu có ít nhất là 8 ký tự, trong đó có cả chữ và số.</p>
                     <div class="input_form">
                         <input type="password" class="form-control form__password" id="form__password" placeholder="Nhập mật khẩu" />
                         <span class="material-symbols-outlined" id="eye-open-psw">visibility</span>
@@ -70,9 +60,7 @@
                     </div>
                 </div>
                 <div class="error-message" id="error-message"></div>
-                <button id="register-button" type="submit" class="btn form__submit">
-                    Đăng ký
-                </button>
+                <button id="register-button" type="submit" class="btn form__submit">Đăng ký</button>
             </form>
 
             <a href="#" class="btn register__login" role="button">Bạn đã có tài khoản? <span class="highlight">Đăng nhập</span></a>
@@ -84,11 +72,10 @@
         </section>
     </main>
 
-    </script>
+    <%- include('../partials/footer.ejs') %>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="/scripts/header.js"></script>
     <script src="/scripts/register.js"></script>
-    <script src="/scripts/header.js"></script>
 </body>
 
 </html>
