--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -1,5 +1,6 @@
 :root {
   --primary: #00696D;
+  --secondary: #FE9C0B;
 }
 
 * {
@@ -17,12 +18,24 @@
   color: var(--primary);
 }
 
+.secondary {
+  background-color: var(--secondary);
+}
+
+.secondary-text {
+  color: var(--secondary);
+}
+
 .mt-16 {
   margin-top: 16px;
 }
 
 .mt-32 {
   margin-top: 32px;
+}
+
+.mt-64 {
+  margin-top: 64px;
 }
 
 .container {
@@ -37,13 +50,11 @@ header, footer {
 }
 
 button {
-  
   cursor: pointer;
-  height: 40px;
+  height: 48px;
   display: inline-block;
   padding: 0;
   border-radius: 8px;
-
 
   & .status-layer {
     height: 100%;
@@ -68,4 +79,8 @@ button.btn--filled {
   &:hover .status-layer{
     background-color: rgba(0, 0, 0, 0.2);
   }
+}
+
+button.btn--filled.sec {
+  background-color: var(--secondary);
 }
