--- a/src/public/styles/pages/index.css
+++ b/src/public/styles/pages/index.css
@@ -9,29 +9,39 @@
 }
 
 .slider {
-  width: 400px;
-  height: 300px;
-  overflow: hidden;
-}
-
-.slider-image {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
+  height: 600px;
+
+  overflow: hidden;
+
+  & .slider__wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+
+    animation: slide-3 10s infinite;
+
+    & .slider__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 }
 
-.slider-image.active {
-  opacity: 1;
-}
-
-@keyframes slide {
+@keyframes slide-3 {
   0% {
-    transform: translateX(0);
+    transform: translateX(0%);
+  }
+  23.33% {
+    transform: translateX(0%);
   }
 
   33.33% {
+    transform: translateX(-100%);
+  }
+
+  56.66% {
     transform: translateX(-100%);
   }
 
@@ -39,47 +49,14 @@
     transform: translateX(-200%);
   }
 
-  100% {
+  90% {
     transform: translateX(-200%);
   }
-}
 
-.slider-image:nth-child(1) {
-  animation: slide 9s infinite;
-}
-
-.slider-image:nth-child(2) {
-  animation: slide 9s infinite;
-  animation-delay: 3s;
-}
-
-.slider-image:nth-child(3) {
-  animation: slide 9s infinite;
-  animation-delay: 6s;
-}
-
-#discover-section {
-  & .section__content {
-    position: relative;
-
-    & img {
-      width: 100%;
-      /* max-height: 384px; */
-      object-fit: cover;
-    }
-
-    & span {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 64px;
-
-      color: white;
-      font-size: 120px;
-      font-weight: bold;
-      text-align: center;
-    }
+  100% {
+    transform: translateX(-300%);
   }
+
 }
 
 #voucher-section {
