Add /pages/resetPassword, /styles/resetPassword, /scripts/resetPassword

--- a/src/public/styles/pages/resetPassword.css
+++ b/src/public/styles/pages/resetPassword.css
@@ -17,8 +17,7 @@ body {
     gap: 24px;
 }
 
-.forgotPassword {
-    width: 55%;
+.resetPassword {
     box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.25);
     border-radius: 12px;
     box-sizing: border-box;
@@ -32,29 +31,29 @@ body {
     margin: 0;
 }
 
-.forgotPassword__title {
+.resetPassword__title {
     text-align: center;
     font-size: 2rem;
     font-weight: 600;
 }
 
-.forgotPassword__form {
-    display: inherit;
-    flex-direction: inherit;
-    gap: 8px;
-}
-
-.forgotPassword__form input {
-    padding: 11px 12px;
-}
-
-.forgotPassword__note {
+.resetPassword__note {
     width: 100%;
     font-style: italic;
     font-size: 0.875rem;
     font-weight: 400;
     margin: 0;
     padding: 0;
+}
+
+.resetPassword__form {
+    display: inherit;
+    flex-direction: inherit;
+    gap: 8px;
+}
+
+.resetPassword__form input {
+    padding: 11px 12px;
 }
 
 .form-label {
@@ -86,6 +85,13 @@ body {
     position: relative;
 }
 
+span.material-symbols-outlined {
+    position: absolute;
+    bottom: 28%;
+    right: 3%;
+    color: #00696D;
+    cursor: pointer;
+}
 
 .form-control.is-invalid {
     background-image: none;
