--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -39,7 +39,7 @@
                 <button id="login-button" type="submit" class="btn form__submit">Đăng nhập</button>
             </form>
 
-            <a href="#" class="btn login__register" role="button">Bạn chưa có tài khoản? <span class="highlight">Đăng ký</span></a>
+            <a href="/register" class="btn login__register" role="button">Bạn chưa có tài khoản? <span class="highlight">Đăng ký</span></a>
         </section>
     </main>
 
