--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -63,7 +63,7 @@
                 <button id="register-button" type="submit" class="btn form__submit">Đăng ký</button>
             </form>
 
-            <a href="#" class="btn register__login" role="button">Bạn đã có tài khoản? <span class="highlight">Đăng nhập</span></a>
+            <a href="/login" class="btn register__login" role="button">Bạn đã có tài khoản? <span class="highlight">Đăng nhập</span></a>
             <p class="register__confirm">
                 Bằng việc đăng ký, bạn đã đồng ý với 2WAYS về <br />
                 <a href="#">điều khoản dịch vụ</a> và
