--- a/src/views/partials/header-small-title.ejs
+++ b/src/views/partials/header-small-title.ejs
@@ -1,7 +1,7 @@
 <header>
     <div class="header-container">
         <img class="logo" src="/imgs/logo-white.png" alt="2WAYS.com" />
-        <p class="title" href="#"><%= title %></a></p>
+        <p class="title" href="#"><%= title %></p>
         <a href="#" class="help">Bạn cần sự trợ giúp?</a>
     </div>
 </header>
