Add header, footer to /pages/fogot-password.ejs, /pages/reset-password.ejs

--- a/src/views/pages/forgot-password.ejs
+++ b/src/views/pages/forgot-password.ejs
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <%- include('../partials/header-small-title', {title}) %>
+
     <main class="content-container">
         <section class="forgotPassword">
             <h1 class="forgotPassword__title">Nhận liên kết đặt lại mật khẩu</h1>
@@ -29,6 +31,7 @@
         </section>
     </main>
 
+    <%- include('../partials/footer', {title}) %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/scripts/forgot-password.js"></script>
