--- a/src/public/styles/pages/reset-password.css
+++ b/src/public/styles/pages/reset-password.css
@@ -1,3 +1,7 @@
+@import url("/styles/variables.css");
+@import url("/styles/partials/header-small-title.css");
+@import url("/styles/partials/footer.css");
+
 html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
@@ -6,6 +10,8 @@ html {
 
 body {
     width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 
 .content-container {
