--- a/src/views/pages/reset-password.ejs
+++ b/src/views/pages/reset-password.ejs
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <%- include('../partials/header-small-title', {title}) %>
+
     <main class="content-container">
         <section class="resetPassword">
             <h1 class="resetPassword__title">Đặt lại mật khẩu</h1>
@@ -40,6 +42,7 @@
         </section>
     </main>
 
+    <%- include('../partials/footer', {title}) %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/scripts/reset-password.js"></script>
