commit before pull code on branch hy

--- a/src/views/pages/resetPassword.ejs
+++ b/src/views/pages/resetPassword.ejs
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="row">
-                    <label for="form__password-confirm" class="form-label">Nhập lại mật khẩu mới</label>
+                    <label for="form__password-confirm" class="form-label">Xác nhận mật khẩu mới</label>
                     <div class="input_form">
                         <input type="password" class="form-control form__password-confirm" id="form__password-confirm" placeholder="Nhập lại mật khẩu mới">
                         <span class="material-symbols-outlined" id="eye-open-cpsw">visibility</span>
