--- a/src/views/pages/account-page.ejs
+++ b/src/views/pages/account-page.ejs
@@ -17,12 +17,12 @@
     <title>Thông tin cá nhân</title>
   </head>
   <body>
-    <header style="height: 160px; background-color: pink"></header>
+    <%- include('../partials/header-small') %>
 
     <div class="container">
       <aside class="aside--wrapper">
         <div class="aside--content">
-          <img src="../img/row-1-column-6.png" alt="" />
+          <img src="/imgs/milo.jpg" alt="" />
           <div class="aside__content--detail">
             <p style="font-weight: 500; margin: 12px 0 0 0">Giàu Phan</p>
             <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
