--- a/src/views/partials/header-small.ejs
+++ b/src/views/partials/header-small.ejs
@@ -13,7 +13,7 @@
             <div class="top-authenticator">
                 <p>Chào,</p>
                 <p>Giau Phan</p>
-                <img src="/imgs/logo-white.png" alt="" />
+                <img src="" alt="" />
             </div>
         </div>
     </div>
