--- a/src/public/styles/pages/account-page.css
+++ b/src/public/styles/pages/account-page.css
@@ -1,3 +1,7 @@
+@import url("/styles/variables.css");
+@import url("/styles/components/room-in-hs.css");
+@import url("/styles/partials/header-small.css");
+@import url("/styles/partials/footer.css");
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
