--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -18,7 +18,7 @@
 
 <body>
   <div id="main">
-    <header></header>
+    <%- include('../partials/header-full') %>
     <main>
       <section id="discover-section" class="mt-64 primary-text">
         <h1 class="section__title">Khám phá về 2Way</h1>
@@ -62,8 +62,8 @@
             </div>
           </div>
         </div>
-        <p class="section__detail mt-16">Khuyến mãi, giảm giá và ưu đãi đặc biệt
-          dành riêng cho bạn</p>
+        <p class="section__detail mt-16">Khuyến mãi, giảm giá và ưu đãi đặc
+          biệt dành riêng cho bạn</p>
       </section>
       <section id="partners-section" class="mt-64 primary-text">
         <h1 class="section__title">Các Đối tác của 2Ways</h1>
@@ -118,7 +118,7 @@
         </div>
       </section>
     </main>
-    <footer class="mt-32"></footer>
+    <%- include('../partials/footer') %>
   </div>
 
   <script
