--- a/src/public/styles/partials/footer.css
+++ b/src/public/styles/partials/footer.css
@@ -1,33 +1,43 @@
+@import url(/styles/base.css);
+
 footer {
-  height: 300px;
+  /* height: 300px;
   display: inherit;
   align-items: center;
-  justify-content: space-between;
-  border-top: 1px solid gray;
+  justify-content: space-between; */
+  padding: 32px;
+  background: #f6f6f6;
+  /* border-top: 1px solid gray; */
+
+  & ul {
+    padding: 0px;
+    margin: 0px;
+    list-style-type: none;
+  }
+
+  & p {
+    text-align: justify;
+  }
 }
 
-.footer-container {
-  width: 80%;
-  margin: 0 auto;
-  display: inherit;
-  justify-content: space-between;
+.footer__container {
+  width: 100%;
+  max-width: 1152px;
+  margin: auto;
 }
 
-.contact {
-  width: 39%;
-  display: inherit;
-  flex-direction: column;
-  gap: 16px;
+#footer__contact {
+  
 }
 
-.contact h3,
+#footer__contact h3,
 .about h3,
 .update h3 {
   font-size: 1.375rem;
   margin: 0;
 }
 
-.contact p {
+#footer__contact p {
   font-size: 1rem;
   margin: 0;
 }
@@ -35,6 +45,10 @@ footer {
 .contact__social {
   display: inherit;
   gap: 16px;
+
+  & > li {
+    display: inline-block;
+  }
 }
 
 .social__logo {
