--- a/src/public/styles/partials/header-full.css
+++ b/src/public/styles/partials/header-full.css
@@ -1,3 +1,5 @@
+@import url(/styles/base.css);
+
 /* * {
     margin: 0;
     padding: 0;
@@ -14,7 +16,7 @@ header {
   align-items: center;
   justify-content: space-around;
   /* position: sticky; */
-  width: 100vw;
+  width: 100%;
   background-image: url(/imgs/bg-header.png);
   height: 484px;
   position: no-repeat;
@@ -24,12 +26,12 @@ header {
   top: 0;
 }
 
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 80%;
-}
+} */
 
 .container__header--top {
   display: flex;
@@ -60,8 +62,10 @@ header {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  padding: 0px;
+  margin: 0px;
   gap: 12px;
-  height: 65px;
+  /* height: 65px; */
 }
 
 .container__nav--top ul li {
@@ -105,26 +109,28 @@ header {
 }
 
 /* Header with login*/
-/* .top-authenticator {
-        top: 0;
-        right: 0;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-      }
-      .top-authenticator img {
-        width: 64px;
-        height: 64px;
-        margin: 0 5px;
-        border-radius: 100%;
-      }
-      .top-authenticator p {
-        margin: 0 5px;
-        font-size: 24px;
-        font-family: Roboto;
-        font-weight: 600;
-        line-height: 32px;
-      } */
+.top-authenticator {
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.top-authenticator img {
+  width: 64px;
+  height: 64px;
+  margin: 0 5px;
+  border-radius: 100%;
+}
+
+.top-authenticator p {
+  margin: 0 5px;
+  font-size: 24px;
+  font-family: Roboto;
+  font-weight: 600;
+  line-height: 32px;
+}
 
 .header--title {
   margin-top: 64px;
@@ -155,10 +161,10 @@ header {
   width: 1152px;
 }
 
-.top-authenticator button:hover {
+/* .top-authenticator button:hover {
   box-shadow: 1px 2px rgba(0, 0, 0, 0.7);
   transition: 0.2s;
-}
+} */
 
 .main--search .search__wrapper {
   background-color: #ffffff;
