--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -28,8 +28,6 @@
           </div>
         </button>
 
-
-
         <!-- Header with login -->
 
         <!-- <p>Chào,</p>
@@ -59,7 +57,7 @@
                 fill="#90A6B1" />
             </g>
           </svg> -->
-          <span ></span>
+          <span class="material-icons">location_on</span>
           <input class="input_address" type="text" placeholder="Nơi muốn đến" />
         </div>
 
